tests/compilefail03.out
[1mtests/compilefail03.pas:8:10: [0m[1m[91merror:[0m Cannot compare Boolean to non-Boolean
     8 | 	if b < i then