tests/compilefail03.pas
program compilefail03(output);

var b:boolean; i:integer; r:real;

begin
	b:=true;
	i:=9;
	if b < i then 
		writeln('hi');
end.
